# contract-agent

./: README.md  pyproject.toml
contract_agent/: __init__.py  agent.py  clause_extractor.py  cli.py
