[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-agent-ai"
version = "0.1.0"
description = "AI-powered contract analysis agent: extract clauses, flag risks, compare against templates."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["contract", "legal", "ai", "anthropic", "claude", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "pypdf>=4.0",
]

[project.scripts]
contract-agent = "contract_agent.cli:main"

[project.urls]
Repository = "https://github.com/example/contract-agent-ai"
Issues = "https://github.com/example/contract-agent-ai/issues"

[tool.hatch.build.targets.wheel]
packages = ["contract_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
